Bug 53164 - Undefined reference to template function instantiation
Summary: Undefined reference to template function instantiation
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.6.2
: P3 normal
Target Milestone: 12.2
Assignee: Patrick Palka
URL:
Keywords: link-failure
: 82657 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-30 09:45 UTC by poletti.marco
Modified: 2023-04-01 14:19 UTC (History)
4 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail: 11.1.0, 4.6.4
Last reconfirmed: 2021-08-09 00:00:00


Attachments
A (hopefully) minimal test case (223 bytes, text/x-c++src)
2012-04-30 09:45 UTC, poletti.marco
Details

Note You need to log in before you can comment on or make changes to this bug.
Description poletti.marco 2012-04-30 09:45:42 UTC
Created attachment 27266 [details]
A (hopefully) minimal test case

g++ 4.6.2 gives an undefined reference error in the attached code.
It works fine in clang++.

Set the macro WORKAROUND to 1 to workaround the issue (also highlighting the fact that the template function can be instantiated).
Comment 1 Jonathan Wakely 2012-04-30 10:46:39 UTC
Looks as though we need to call mark_used for function templates used as non-type template parameters
Comment 2 Andrew Pinski 2021-08-12 02:21:59 UTC
*** Bug 82657 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Palka 2021-10-05 14:25:30 UTC
(In reply to Jonathan Wakely from comment #1)
> Looks as though we need to call mark_used for function templates used as
> non-type template parameters

Yep :)
Comment 4 GCC Commits 2022-06-06 18:29:27 UTC
The master branch has been updated by Patrick Palka <ppalka@gcc.gnu.org>:

https://gcc.gnu.org/g:733a792a2b2e1662e738fa358b45a2720a8618a7

commit r13-995-g733a792a2b2e1662e738fa358b45a2720a8618a7
Author: Patrick Palka <ppalka@redhat.com>
Date:   Mon Jun 6 14:29:12 2022 -0400

    c++: function NTTP argument considered unused [PR53164, PR105848]
    
    Here at parse time the template argument f (an OVERLOAD) in A<f> gets
    resolved ahead of time to the FUNCTION_DECL f<int>, and we defer marking
    f<int> as used until instantiation (of g) as usual.
    
    Later when instantiating g the type A<f> (where f has already been
    resolved) is non-dependent, so tsubst_aggr_type avoids re-processing its
    template arguments, and we end up never actually marking f<int> as used
    (which means we never instantiate it) even though A<f>::h() later calls
    it, leading to a link error.
    
    This patch works around this issue by looking through ADDR_EXPR when
    calling mark_used on the substituted callee of a CALL_EXPR.
    
            PR c++/53164
            PR c++/105848
    
    gcc/cp/ChangeLog:
    
            * pt.cc (tsubst_copy_and_build) <case CALL_EXPR>: Look through an
            ADDR_EXPR callee when calling mark_used.
    
    gcc/testsuite/ChangeLog:
    
            * g++.dg/template/fn-ptr3.C: New test.
Comment 5 GCC Commits 2022-07-21 16:48:13 UTC
The releases/gcc-12 branch has been updated by Patrick Palka <ppalka@gcc.gnu.org>:

https://gcc.gnu.org/g:670ef5b108d0acfbde96f44b064079f2fa0c92d4

commit r12-8604-g670ef5b108d0acfbde96f44b064079f2fa0c92d4
Author: Patrick Palka <ppalka@redhat.com>
Date:   Mon Jun 6 14:29:12 2022 -0400

    c++: function NTTP argument considered unused [PR53164, PR105848]
    
    Here at parse time the template argument f (an OVERLOAD) in A<f> gets
    resolved ahead of time to the FUNCTION_DECL f<int>, and we defer marking
    f<int> as used until instantiation (of g) as usual.
    
    Later when instantiating g the type A<f> (where f has already been
    resolved) is non-dependent, so tsubst_aggr_type avoids re-processing its
    template arguments, and we end up never actually marking f<int> as used
    (which means we never instantiate it) even though A<f>::h() later calls
    it, leading to a link error.
    
    This patch works around this issue by looking through ADDR_EXPR when
    calling mark_used on the substituted callee of a CALL_EXPR.
    
            PR c++/53164
            PR c++/105848
    
    gcc/cp/ChangeLog:
    
            * pt.cc (tsubst_copy_and_build) <case CALL_EXPR>: Look through an
            ADDR_EXPR callee when calling mark_used.
    
    gcc/testsuite/ChangeLog:
    
            * g++.dg/template/fn-ptr3.C: New test.
    
    (cherry picked from commit 733a792a2b2e1662e738fa358b45a2720a8618a7)
Comment 6 Patrick Palka 2022-08-11 13:23:50 UTC
Fixed for GCC 12.2/13
Comment 7 GCC Commits 2023-04-01 14:19:17 UTC
The master branch has been updated by Patrick Palka <ppalka@gcc.gnu.org>:

https://gcc.gnu.org/g:b5e38b1c166357e2a63d38ae6da7ae5d68fc115b

commit r13-6970-gb5e38b1c166357e2a63d38ae6da7ae5d68fc115b
Author: Patrick Palka <ppalka@redhat.com>
Date:   Sat Apr 1 10:19:08 2023 -0400

    c++: improve "NTTP argument considered unused" fix [PR53164, PR105848]
    
    r13-995-g733a792a2b2e16 worked around the problem of (pointer to)
    function NTTP arguments not always getting marked as odr-used, by
    redundantly calling mark_used on the substituted ADDR_EXPR callee of a
    CALL_EXPR.  That is just a narrow workaround however, since it assumes
    the function is later called, but the use as a template argument alone
    should constitute an odr-use of the function (since template arguments
    are an evaluated context, and we're really passing its address); we
    shouldn't need to subsequently call or otherwise use the function NTTP
    argument.
    
    This patch fixes this in a more general way by walking the template
    arguments of each specialization that's about to be instantiated and
    redundantly calling mark_used on all entities used within.  As before,
    the call to mark_used as it worst a no-op, but it compensates for the
    situation where the specialization was first formed in a template context
    in which mark_used is inhibited.
    
    Another approach would be to call mark_used whenever we substitute a
    TEMPLATE_PARM_INDEX, but that would result in many more redundant calls
    to mark_used compared to this approach.  And as the second testcase
    below illustrates, we also need to walk C++20 class NTTP arguments which
    can be large and thus expensive to walk repeatedly.  The change to
    invalid_tparm_referent_p is needed to avoid incorrectly rejecting class
    NTTP arguments containing function pointers as in the testcase.
    
    (The third testcase is unrelated to this fix, but it helped rule out an
    earlier approach I was considering and it seems we don't have existing
    test coverage for this situation.)
    
            PR c++/53164
            PR c++/105848
    
    gcc/cp/ChangeLog:
    
            * pt.cc (invalid_tparm_referent_p): Accept ADDR_EXPR of
            FUNCTION_DECL.
            (instantiate_class_template): Call mark_template_arguments_used.
            (tsubst_copy_and_build) <case CALL_EXPR>: Revert r13-995 change.
            (mark_template_arguments_used): Define.
            (instantiate_body): Call mark_template_arguments_used.
    
    gcc/testsuite/ChangeLog:
    
            * g++.dg/template/fn-ptr3a.C: New test.
            * g++.dg/template/fn-ptr3b.C: New test.
            * g++.dg/template/fn-ptr4.C: New test.